==============================================================================
TradeDangerous, Copyright (C) Oliver "kfsone" Smith, July 2014
==============================================================================

v6.8.5 Feb 04 2015
. (kfsone) Added "trade" command to list station-to-station trades,
. (kfsone) "station" command now lists 5 sell and 5 buy items,
. (kfsone) "station" does a better job of parsing existing station names,
. (kfsone) Removed "--system" from "station" command, use
       trade.py station -a "SYSTEM/Station"
       syntax instead.
. (OpenSS) Added "Run To" option to trade.bat,
. (kfsone) Speed improvements to .csv and .prices loading,
. (kfsone) maddavo plugin tries to explain encoding errors,
. (chmarr) Fixed trade.py using the wrong argument list (#herp),
. (kfsone) titleFixup will handle 'von', 'de' and 'du' correctly,
+ Station/Rare Data (RavenDT)

v6.8.4 Feb 01 2015
. (kfsone) Fixed tradecalculator not selecting most profitable trade sometimes
. (kfsone) Set 'BRUTE_FIT' in the environment to force use of the brute-force
        trade calculator (for diagnostic purposes). e.g.
           BRUTE_FIT=1 trade.py run ...

v6.8.3 Jan 31 2015
. (kfsone) Code and data cleanup, added stations
. (kfsone) Added misc/eddn.py API for developers wanting to access EDDN,

v6.8.2 Jan 27 2015
. (kfsone) Issue #148 Don't blow up horribly when tkinter is missing,
. (kfsone) Issue #149 "nav" with --via was broken,
. (kfsone) Typo correction in the maddavo splash (thanks, Stefan),
+ Stations: Tromador, Dave Ryalls, Jason Zions, MacNetron

v6.8.1 Jan 25 2015
. (kfsone) Additional rules to prevent data pollution (ocr derp protection),
. (kfsone) Support for maddavo's "3 hour" prices file,
. (kfsone) Changed how downloads work to massively improve download speeds,
. (kfsone) Improvements to the EDSC tools,
. (kfsone) "First time" banner explaining the maddavo import plugin,
. (kfsone) Fixed "shipvendor" command doing a poor job of finding stations,