@@ -2,6 +2,11 @@
 TradeDangerous, Copyright (C) Oliver "kfsone" Smith, July 2014
 ==============================================================================
 
+[wip] Feb 05 2015
+. (kfsone) Added "distanceTo" function to "System" which returns the
+       distance in ly to a second system,
+. (kfsone) Minor performance gain in distance calculations,
+
 v6.8.5 Feb 04 2015
 . (kfsone) Added "trade" command to list station-to-station trades,
 . (kfsone) "station" command now lists 5 sell and 5 buy items,
